--- a/styles.css
+++ b/styles.css
@@ -123,8 +123,6 @@ a {
 
 .section-peculiarities {
     color: var(--fontcolor-main);
-    font-size: 14px;
-    vertical-align: top;
     letter-spacing: 0.03em;
     line-height: 1.7;
 }
@@ -181,7 +179,7 @@ a {
 .card-text {
     font-family: inherit;
     font-size: 16px;
-    line-height: 2;
+    line-height: 1.9;
     color: var(--fontcolor-main);
     letter-spacing: 0.03em;
 }
@@ -258,20 +256,19 @@ a {
 
 .footer-nav {
     font-family: Roboto;
-    font-style: normal;
-    font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
+    font-style: normal;
 }
 
 .footer-gmaps {
-    font-family: Roboto;
-    font-style: normal;
-    font-size: 14px;
-    line-height: 1.7;
-    letter-spacing: 0.03em;
+    font-family: inherit;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
     color: var(--fontcolor);
+    list-style: none;
+    font-style: normal;
 }
 
 .footer-nav:hover,
