--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,6 @@
 body {
     background-color: var(--backgroundcolor-header);
     font-family: Roboto, san-serif;
-    font-weight: 400;
     font-size: 14px;
     letter-spacing: 0.03em;
     color: var(--fontcolor-main);
@@ -127,11 +126,12 @@ a {
     letter-spacing: 0.03em;
     line-height: 1.7;
     font-weight: 400;
+    text-transform: none;
 }
 
 /* < !-- What are we doing --> */
 .work-title {
-    font-style: 700;
+    font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
     letter-spacing: 0.03em;
@@ -160,6 +160,7 @@ a {
     font-weight: 500;
     letter-spacing: 0.03em;
     line-height: 1.2;
+    color: var(--fontcolor-secondary)
 }
 
 .team-skill {
